fetching contributor country when missing confirmed affiliation